[gd_scene load_steps=17 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Project/ProjectViewer.gd" type="Script" id=2]
[ext_resource path="res://Project/Project.tscn" type="PackedScene" id=3]
[ext_resource path="res://Icons/icon_GUI_scroll_arrow_right.svg" type="Texture" id=4]
[ext_resource path="res://Project/ProjectSlots.gd" type="Script" id=5]
[ext_resource path="res://Icons/icon_GUI_scroll_arrow_right_hl.svg" type="Texture" id=6]
[ext_resource path="res://Icons/icon_GUI_scroll_arrow_left_hl.svg" type="Texture" id=7]
[ext_resource path="res://Icons/icon_GUI_scroll_arrow_left.svg" type="Texture" id=8]
[ext_resource path="res://Icons/icon_add.png" type="Texture" id=9]
[ext_resource path="res://Icons/icon_option_wheel.svg" type="Texture" id=10]
[ext_resource path="res://Project/AddItem.gd" type="Script" id=11]
[ext_resource path="res://Icons/icon_folder.png" type="Texture" id=12]
[ext_resource path="res://Project/ProjectSlot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fonts/cnr.otf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.03, 0.25, 0.25, 1 )
border_width_left = 3
border_color = Color( 0.12, 0.706667, 1, 1 )
border_blend = true

[node name="ProjectViewer" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
projectScene = ExtResource( 3 )

[node name="Dialogs" type="Control" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -141.5
margin_right = 132.0
margin_bottom = 141.5
popup_exclusive = true
window_title = "Please enter description"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Dialogs/ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 242.0
size_flags_horizontal = 3
align = 3
placeholder_text = "Enter a description..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog2" type="ConfirmationDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -100.0
margin_right = 123.0
margin_bottom = 100.0
window_title = "Please Enter a name..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Dialogs/ConfirmationDialog2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 159.0
placeholder_text = "Enter project name..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -57.0
margin_right = 126.5
margin_bottom = 57.0
window_title = "Error!"
dialog_text = "Project already exists"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.0
margin_top = -159.0
margin_right = 211.0
margin_bottom = 159.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.todo" )
current_dir = "user://"
current_file = "sad.todo"
current_path = "user://sad.todo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="HBoxContainer" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="View"]
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="View/VBoxContainer"]
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Please open/create a project (wheel on the right)"
align = 1
valign = 1
autowrap = true

[node name="ProjectSlots" type="PanelContainer" parent="View"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_styles/panel = SubResource( 2 )
script = ExtResource( 5 )
slot = ExtResource( 13 )
right = ExtResource( 4 )
right_hover = ExtResource( 6 )
left = ExtResource( 8 )
left_hover = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="View/ProjectSlots"]
margin_left = 3.0
margin_right = 340.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="View/ProjectSlots/VBoxContainer"]
margin_right = 337.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="View/ProjectSlots/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="View/ProjectSlots/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 308.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="TextureButton2" type="TextureButton" parent="View/ProjectSlots/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 337.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture_normal = ExtResource( 10 )
expand = true

[node name="PopupMenu" type="PopupMenu" parent="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_bottom = 55.0
items = [ "Create new project", ExtResource( 9 ), 0, false, false, 0, 0, null, "", false, "Open project", ExtResource( 12 ), 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 11 )
projectDialog = NodePath("../../../../../../Dialogs/ConfirmationDialog2")
fileDialog = NodePath("../../../../../../Dialogs/FileDialog")

[node name="Tween" type="Tween" parent="View/ProjectSlots"]

[node name="ProjectTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 360.0
autostart = true
[connection signal="confirmed" from="Dialogs/ConfirmationDialog" to="." method="_confirmed_addition"]
[connection signal="confirmed" from="Dialogs/ConfirmationDialog2" to="." method="create_new_project"]
[connection signal="file_selected" from="Dialogs/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="toggled" from="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton" to="View/ProjectSlots" method="_on_TextureButton_toggled"]
[connection signal="pressed" from="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton2" to="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton2/PopupMenu" method="popup"]
[connection signal="index_pressed" from="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton2/PopupMenu" to="View/ProjectSlots/VBoxContainer/HBoxContainer/TextureButton2/PopupMenu" method="_on_PopupMenu_index_pressed"]
[connection signal="timeout" from="ProjectTimer" to="." method="_on_ProjectTimer_timeout"]
